--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
 :root {
-    /*--green: #52AF3D;*/
-    /*--main-color: #52AF3D;*/
+    --green: #52AF3D;
     --main-color: #004c8a;
     --black: #4A474A;
     --red: #d32f2f;
